<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_activity_time_key" translatable="false">pref_activity_time</string>
    <string name="pref_activity_time">Pomodoro Length</string>
    <string name="pref_activity_time_smry">Preferred pomodoro length: %s minutes</string>
    <string name="pref_break_time_key" translatable="false">pref_break_time</string>
    <string name="pref_break_time">Pomodoro Break</string>
    <string name="pref_break_time_smry">Preferred break length: %s minutes</string>
    <string name="pref_sound_alarm">Play Notification</string>
    <string name="pref_sound_alarm_key" translatable="false">pref_sound_alarm</string>
    <string name="pref_sound_alarm_smry">Play notification sound when time expires</string>
    <string name="pref_count_up">Timers Count Up</string>
    <string name="pref_count_up_key">pref_count_up</string>
    <string name="pref_count_up_smry">Timers count up during pomodoros and breaks</string>

    <string name="label_activity_length">Pomodoro Length</string>
    <string name="label_break_length">Break Length</string>
    <string name="label_event_name">Activity</string>
    <string name="title_activity_settings">Preferences</string>

    <string name="create_event_title">Start a New Activity</string>
    <string name="create_pomodoro_title">Start a New Pomodoro</string>
    <string name="hint_event_name">Enter a name</string>
    <string name="create_event_button">Start</string>
    <string name="create_team_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_event_timer">Activity Timer</string>
    <string name="next_pomodoro_btn">Start Pomodoro</string>
    <string name="start_break_btn">Break</string>
    <string name="intermission_btn">Intermission</string>
    <string name="end_event_btn">Finish Activity</string>

    <string name="activity_status_waiting"></string>
    <string name="activity_status_intermission">Intermission</string>
    <string name="activity_status_break">On Break</string>
    <string name="activity_status_activity"></string>

    <string name="waiting_for_pomodoro">Waiting to start ...</string>
    <string name="blank_timer">-- --</string>

    <string name="pomodoro_activity_time">Activity: %s</string>
    <string name="hint_pomodoro_name">Name for the pomodoro</string>
    <string name="default_pomodoro_name">Pomodoro %1$d</string>
    <string name="placeholder_event_nane">Current Activity</string>
    <string name="label_activity_average">Activity Average: %s</string>
    <string name="label_activity_total">Activity Total Time: %s</string>
    <string name="label_time_total">Total Time: %s</string>
    <string name="label_break_average">Break Time Average: %s</string>
    <string name="pomodoro_break_time">Break: %s</string>
    <string name="title_summary">Activity Summary</string>
    <string name="main_activity_title">Pomodoro Activities</string>

    <string name="confirm_delete_event_title">Delete Activity</string>
    <string name="confirm_delete_event_message">This will delete the record of this activity.</string>
    <string name="confirm_delete_event_positive">Continue</string>
    <string name="confirm_delete_event_negative">Cancel</string>
    <string name="title_activity_team_join">Join or Create Teams</string>
    <string name="find_team">Find Team</string>
    <string name="action_search">Search</string>
    <string name="hint_search_team">Enter a team name</string>
    <string name="label_team_found" />
    <string name="action_join">Request to Join</string>
    <string name="team_search_not_found">No matching team</string>
    <string name="team_search_not_selected">No team selected</string>
    <string name="join_no_team">No team</string>
    <string name="team_search_found">Team: %s</string>
    <string name="join_team_admin">Manage Team</string>
    <string name="join_already_member">Already joined</string>
    <string name="join_new">Join team</string>
    <string name="join_not_accepted">Applied</string>
    <string name="action_teams">My Teams</string>
    <string name="title_create_join_team">My Teams</string>
    <string name="label_new_team">Enter a new team name</string>
    <string name="create_team_title">Create a New Team</string>
    <string name="team_create_failed">Unable to create team.</string>
    <string name="title_activity_team_manage">Team Management</string>
    <string name="label_team_owner">Owner: %s</string>
    <string name="msg_team_update_failed">Team update failed.</string>
    <string name="action_logout">Log off</string>
    <string name="member_placeholder">Private activity</string>
    <string name="option_private_events">Personal activities</string>
    <string name="option_my_team">Create or join teams ...</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_not_available">Not logged in</string>
    <string name="widget_none_active">No active activity</string>
    <string name="widget_status_waiting">Not started</string>
    <string name="widget_status_intermission">Intermission</string>
    <string name="widget_status_break">On break</string>
    <string name="widget_status_activity">Working</string>
    <string name="next_pomodoro_over">Activity ended</string>
    <string name="action_view_summary">View summary</string>
    <string name="activity_status_ended">Finished</string>
    <string name="role_view_label">(%s)</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="timer_format_hours" formatted="false">%d:%02d:%02d</string>
    <string name="timer_format" formatted="false">%d:%02d</string>
    <string name="pomodoro_name_required">A value is required for the name.</string>
    <string name="event_name_required">A value is required for the name.</string>
    <string name="team_name_required">A value is required for the name.</string>

    <string name="fab_add_event">Start a new activity</string>
    <string name="fab_remove_event">Remove the record of this activity</string>
    <string name="fab_add_team">Create a new team</string>
</resources>
