<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EventSummaryActivity"
    tools:showIn="@layout/activity_event_summary"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_layout_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CardStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_layout_margin"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_time_total"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/label_time_total"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_activity_total"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/label_activity_total"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_activity_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/label_activity_average"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_break_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/label_break_average"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_members"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="3"
        android:layout_margin="@dimen/base_layout_margin"
        style="@style/CardStyle">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_layout_margin"
            android:id="@+id/recycler_members">
        </android.support.v7.widget.RecyclerView>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_statistics"
        app:layout_constraintBottom_toTopOf="@id/card_members"
        app:layout_constraintVertical_weight="3"
        android:layout_marginStart="@dimen/base_layout_margin"
        android:layout_marginLeft="@dimen/base_layout_margin"
        android:layout_marginEnd="@dimen/base_layout_margin"
        android:layout_marginRight="@dimen/base_layout_margin"
        android:layout_marginTop="@dimen/base_layout_margin"
        android:layout_marginBottom="0dp"
        style="@style/CardStyle">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_layout_margin"
            android:id="@+id/recycler_pomodoro_list">
        </android.support.v7.widget.RecyclerView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>